some stuff working

--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,11 @@
     </head>
 
     <body id="home">
+        <div id="buttons">
+            <h2>sort by:</h2>
+            <button id="name" data-sort="name">name</button>
+        </div><!--/#buttons-->
 
-        <h1>hello</h1>
         <div id="main">
         </div><!--/#main-->
 
