--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,10 @@
         <div id="buttons">
             <h2>sort by:</h2>
             <button id="name" data-sort="name">name</button>
+            <button id="abv" data-sort="abv">abv</button>
+            <button id="breweryLocation" data-sort="breweryLocation">breweryLocation</button>
+            <button id="isDomestic" data-sort="isDomestic">isDomestic</button>
+            <button id="rating" data-sort="rating">rating</button>
         </div><!--/#buttons-->
 
         <div id="main">
