--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
         <link rel="stylesheet" href="styles/main.css">
+        <script type="text/javascript" src="//use.typekit.net/sok5ryj.js"></script>
+        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     </head>
 
     <body id="home">
