--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
         <th>abv</th>
         <th>rating</th>
         <th>locationAbbrev</th>
+        <th>style</th>
     </tr>
     {{#beers}}
     <tr>
@@ -43,6 +44,7 @@
         <td>{{abv}}</td>
         <td>{{rating}}</td>
         <td>{{locationAbbrev}}</td>
+        <td>{{style}}</td>
     </tr>
     {{/beers}}
 </table>
